# hospital-hissec

./: Cargo.toml  README.md
database/: schema.sql  seed.sql
policy/: hissec.dynamo
src/: main.rs
src/config/: mod.rs
src/controllers/: auth_controller.rs  ehr_controller.rs  mod.rs  sensor_controller.rs  user_controller.rs
src/errors/: mod.rs  policy_error.rs
src/models/: ehr.rs  enums.rs  mod.rs  role.rs  sensor.rs  subject.rs  user.rs  user_role.rs  ward.rs
src/policy/: mod.rs  pdp.rs  pep.rs  requests.rs  responses.rs  rules.rs
src/routes/: api.rs  mod.rs
src/services/: app_state.rs  auth_service.rs  ehr_service.rs  mod.rs  sensor_service.rs  user_service.rs  ward_service.rs
src/storage/: ehr_repository.rs  mod.rs  sensor_repository.rs  subject_repository.rs  user_repository.rs  ward_repository.rs
src/tests/: ehr_tests.rs  integration_tests.rs  login_tests.rs  policy_tests.rs  sensor_tests.rs
src/utils/: helpers.rs  logger.rs  mod.rs
