[package]
name = "hospital-hissec"
version = "1.0.0"
edition = "2021"
authors = ["HISSEC* Workshop Implementation"]
description = "Hospital Information System Security (HISSEC*) with PDP/PEP architecture"

[[bin]]
name = "hospital-hissec"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
